--- a/styles.css
+++ b/styles.css
@@ -910,7 +910,7 @@ a:hover {
 .card-actions {
     position: absolute;
     top: var(--spacing-xl);
-    right: var(--spacing-xl);
+    right: calc(var(--spacing-xl) + 50px);
     display: flex;
     gap: var(--spacing-sm);
     z-index: 2;
@@ -2720,7 +2720,6 @@ textarea {
     -webkit-user-drag: none;
     -moz-user-select: none;
     -ms-user-select: none;
-    user-drag: none;
 }
 
 /* Object position is set dynamically via inline style */
@@ -3015,7 +3014,7 @@ textarea {
     align-items: center;
     justify-content: center;
     font-size: 1.2rem;
-    z-index: 10;
+    z-index: 20;
     transition: var(--transition-fast);
 }
 
