--- a/styles.css
+++ b/styles.css
@@ -1537,11 +1537,13 @@ a:hover {
 .form-group-small input {
     text-align: center;
     -moz-appearance: textfield;
+    appearance: textfield;
 }
 
 .form-group-small input::-webkit-outer-spin-button,
 .form-group-small input::-webkit-inner-spin-button {
     -webkit-appearance: none;
+    appearance: none;
     margin: 0;
 }
 
